force-app/main/default/objects/Notification__c/fields/IsNotificationSent__c.field-meta.xml
<CustomField>
    <fullName>IsNotificationSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNotificationSent</label>
    <type>Checkbox</type>
</CustomField>