force-app/main/default/objects/Notification__c/fields/Notification_Category__c.field-meta.xml
<CustomField>
    <fullName>Notification_Category__c</fullName>
    <label>Notification Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offers</fullName>
            </value>
            <value>
                <fullName>New Launch</fullName>
            </value>
            <value>
                <fullName>User Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>