force-app/main/default/objects/Notification__c/fields/Notification_Content__c.field-meta.xml
<CustomField>
    <fullName>Notification_Content__c</fullName>
    <label>Notification Content</label>
    <type>TextArea</type>
</CustomField>