force-app/main/default/objects/Notification__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <formula>DATEVALUE( Notification_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>