force-app/main/default/objects/Notification__c/fields/Notification_Heading__c.field-meta.xml
<CustomField>
    <fullName>Notification_Heading__c</fullName>
    <label>Notification_Heading</label>
    <length>220</length>
    <type>Text</type>
</CustomField>