force-app/main/default/objects/Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Notification</fullName>
            </value>
            <value>
                <fullName>Followup Notification</fullName>
            </value>
            <value>
                <fullName>Site Visit Notification</fullName>
            </value>
            <value>
                <fullName>Payment Notification</fullName>
            </value>
            <value>
                <fullName>Announcement Notification</fullName>
            </value>
            <value>
                <fullName>Reward and Top performed CPs Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>