force-app/main/default/objects/Notification__c/fields/One_signal_Notifcation_Id__c.field-meta.xml
<CustomField>
    <fullName>One_signal_Notifcation_Id__c</fullName>
    <label>One_signal_Notifcation_Id</label>
    <type>TextArea</type>
</CustomField>